Buttons for use radixUI

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,8 +9,9 @@
 }
 
 
-*, html , body{
+*, html , body, input , button{
   font-family: 'Inter', sans-serif;
+
 }
 @layer utilities {
   .text-balance {
